# sdldualsystem

./: .gitignore  README.md  SDL1_Project.sln
.github/workflows/: msbuild.yml
sdl1/Bejeweled/: Bejeweled.vcxproj  GameException.cpp  main.cpp
sdl1/BermudaSyndrom/: bermuda.vcxproj  bermuda.vcxproj.filters  file.cpp  fs.cpp  game.cpp  main.cpp  mixer_sdl.cpp  parser_scn.cpp
sdl1/Doom/: doom.vcxproj  doom.vcxproj.filters  dummy.cpp
sdl1/Gilbert/: Gilbert.c  MoteurDeJeu.c  MoteurDeJeu.h  Widjet.c  Widjet.h  gilbert.vcxproj  gilbert.vcxproj.filters
sdl1/LBA1/: lba1.vcxproj  lba1.vcxproj.filters  main.c  music.c  sdlengine.c  sdlengine.h  sound.c
sdl1/LastMission/: lastmission.vcxproj  lastmission.vcxproj.filters  m_aux.c  m_core.c  m_gfx_dingoosdl.c  m_gfx_dos32.c  m_gfx_sdl.c  m_gfx_wingdi.c  m_snd.c  m_snd.h  m_snd_data.c  m_snd_data.h  m_snd_dos32.c  m_snd_sdl.c  m_snd_winmm.c  sound.c
sdl1/SGL4/: SGL4.vcxproj  SGLDevice.cpp  SGLMD2Model.cpp  SGLObjModel.cpp  SGLObject.cpp
sdl1/TicTacToe/: AboutGraphicsComponent.cpp  AboutGraphicsComponent.hpp  AboutInputComponent.cpp  AboutInputComponent.hpp  BackgroundSprite.cpp  BackgroundSprite.hpp  BoardAIInputComponent.cpp  BoardAIInputComponent.hpp  BoardGraphicsComponent.cpp  BoardGraphicsComponent.hpp  BoardInputComponent.cpp  BoardInputComponent.hpp  CharSprite.cpp  CharSprite.hpp  GameBoard.cpp  GameBoard.hpp  GameEngine.cpp  GameEngine.hpp  GameOverGraphicsComponent.cpp  GameOverGraphicsComponent.hpp  GameOverInputComponent.cpp  GameOverSprite.cpp  (+22 more)
sdl1/superpang/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  superpang.vcxproj  superpang.vcxproj.filters
sdl1/superpang/po/: Makevars  POTFILES.in  ca.gmo  ca.po  ceferino.pot  es.gmo  es.po  fr.gmo  fr.po
sdl1/superpang/src/: Makefile.am  Makefile.in  actor.cc  actor.h  audio.cc  audio.h  barra.cc  barra.h  bloque.cc  bloque.h  bomba.cc  bomba.h  comojugar.cc  comojugar.h  creditos.cc  creditos.h  escena.h  final.cc  final.h  fuente.cc  fuente.h  fuente2.cc  fuente2.h  gaucho.cc  gaucho.h  grafico.cc  grafico.h  int.h  intro.cc  intro.h  item.cc  item.h  item_menu.cc  item_menu.h  juego.cc  juego.h  libgrafico.cc  libgrafico.h  main.cc  main_ed.cc  (+24 more)
(+951 files in other folders)
